--- a/missingboyfriend.html
+++ b/missingboyfriend.html
@@ -154,10 +154,10 @@
     </p>
     
     <select id="moodSelect">
-      <option value="😡 Angry">😡 Angry</option>
-      <option value="😈 Mischievous">😈 Mischievous</option>
-      <option value="🙁 Sad">🙁 Sad</option>
-      <option value="🙂 Happy">🙂 Happy</option>
+      <option value="😡 Angy">😡 Angy</option>
+      <option value="😈 Muhehehe">😈 Muhehehe</option>
+      <option value="🙁 Ahu ahu ahu">🙁 Ahu ahu ahu</option>
+      <option value="👍 Changa thumbs up">👍 Changa thumbs up</option>
       <option value="😋 Hungry">😋 Hungry</option>
     </select>
 
@@ -281,4 +281,5 @@
   applyAnniversaryTheme();
   </script>
 </body>
+
 </html>
