--- a/button.html
+++ b/button.html
@@ -7,6 +7,7 @@
   <style>
     body {
       font-family: 'Courier New', monospace;
+	  cursor: url("cursor.png"), auto;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -145,4 +146,5 @@
 </script>
 
 </body>
+
 </html>
