--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
     body {
       font-family: 'Courier New', monospace;
+      cursor: url("cursor.png"), auto;
       background-color: #000000;
       color: #ed37bc;
       display: flex;
@@ -69,4 +70,5 @@
     }
   </script>
 </body>
+
 </html>
