--- a/missingboyfriend.html
+++ b/missingboyfriend.html
@@ -8,6 +8,7 @@
     body {
       font-family: 'Courier New', monospace;
       background: url("us-photo.jpg") no-repeat center center fixed;
+	  cursor: url("cursor.png"), auto;
       background-size: cover;
       color: #d77bff;
       display: flex;
@@ -283,3 +284,4 @@
 </body>
 
 </html>
+
