--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="error" id="error"></div>
 
   <script>
-    const SECRET_PHRASE = "open"; // <-- Change this to your chosen phrase
+    const SECRET_PHRASE = "blue"; // <-- Change this to your chosen phrase
 
     function checkPhrase() {
       const input = document.getElementById("secretPhrase").value.trim();
@@ -72,3 +72,4 @@
 </body>
 
 </html>
+
