--- a/missingboyfriend.html
+++ b/missingboyfriend.html
@@ -8,7 +8,6 @@
     body {
       font-family: 'Courier New', monospace;
       background: url("us-photo.jpg") no-repeat center center fixed;
-	  cursor: url("cursor.png"), auto;
       background-size: cover;
       color: #d77bff;
       display: flex;
@@ -28,8 +27,8 @@
   	left: 0;
   	width: 100%;
   	height: 100%;
-  	background: rgba(11, 12, 16, 0.4); /* dark wash */
-  	backdrop-filter: blur(2px); /* soft blur effect */
+  	background: rgba(11, 12, 16, 0.4); 
+  	backdrop-filter: blur(2px); 
   	z-index: 0;
     }
 
@@ -108,25 +107,24 @@
     }
 
     .navbar {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: #1f1b2e;
-      padding: 8px 12px;
-      border-radius: 8px;
-    }
-
-    .navbar a {
-      margin-right: 12px;
-      text-decoration: none;
-      color: #d77bff;
-      font-size: 14px;
-    }
-
-    .navbar a:hover {
-      color: #ffffff;
-      text-decoration: underline;
-    }
+ 	 position: absolute;
+ 	 top: 10px;
+ 	 left: 10px;
+  	background: #1f1b2e;
+  	padding: 8px 12px;
+ 	 border-radius: 8px;
+  	z-index: 10;
+	}
+	.navbar a {
+	  margin-right: 12px;
+ 	 text-decoration: none;
+ 	 color: #d77bff;
+  	font-size: 14px;
+	}
+	.navbar a:hover {
+	  color: #ffffff;
+ 	 text-decoration: underline;
+	}
 
     .form-section {
       display: flex;
@@ -141,6 +139,7 @@
   <div class="navbar">
     <a href="button.html">Panic Button</a>
     <a href="missingboyfriend.html">Missing Boyfriend Portal</a>
+    <a href="cats.html">Unlimited Cat Gifs</a>
   </div>
   
   <audio id="crazyAudio" src="crazy.mp3" preload="auto"></audio>
@@ -155,10 +154,10 @@
     </p>
     
     <select id="moodSelect">
-      <option value="😡 Angy">😡 Angy</option>
-      <option value="😈 Muhehehe">😈 Muhehehe</option>
-      <option value="🙁 Ahu ahu ahu">🙁 Ahu ahu ahu</option>
-      <option value="👍 Changa thumbs up">👍 Changa thumbs up</option>
+      <option value="😡 Angry">😡 Angry</option>
+      <option value="😈 Mischievous">😈 Mischievous</option>
+      <option value="🙁 Sad">🙁 Sad</option>
+      <option value="🙂 Happy">🙂 Happy</option>
       <option value="😋 Hungry">😋 Hungry</option>
     </select>
 
@@ -193,9 +192,9 @@
 
       document.body.appendChild(msg);
 
-      setTimeout(() => msg.style.opacity = 1, 100);   // fade in
-      setTimeout(() => msg.style.opacity = 0, 4000);  // fade out
-      setTimeout(() => msg.remove(), 6000);           // cleanup
+      setTimeout(() => msg.style.opacity = 1, 100);   
+      setTimeout(() => msg.style.opacity = 0, 4000);  
+      setTimeout(() => msg.remove(), 6000);           
     }
 
     function randomLoveLoop() {
@@ -272,9 +271,9 @@
 	function applyAnniversaryTheme() {
     const today = new Date();
     if (today.getDate() === 6) {
-      document.body.style.backgroundColor = "#2b0f36"; // deep romantic purple
+      document.body.style.backgroundColor = "#2b0f36"; 
       document.body.style.color = "#ff9de2"; // pink text
-      document.body.style.backgroundImage = "url('hearts-bg.png')"; // optional heart pattern
+      document.body.style.backgroundImage = "url('hearts-bg.png')"; 
       document.body.style.backgroundSize = "cover";
       document.body.style.backgroundRepeat = "no-repeat";
     }
@@ -282,6 +281,4 @@
   applyAnniversaryTheme();
   </script>
 </body>
-
 </html>
-
