--- a/cats.html
+++ b/cats.html
@@ -66,7 +66,7 @@
     <a href="cats.html">Unlimited Cat Gifs</a>
   </div>
 
-  <h1>🐱 Unlimited Cute Cat Gifs</h1>
+  <h1>Unlimited Cute Cat Gifs</h1>
   <div id="gifContainer"></div>
 
   <script>
@@ -77,22 +77,23 @@
     const gifContainer = document.getElementById("gifContainer");
 
     async function loadCats(count = 6) {
-      for (let i = 0; i < count; i++) {
-        const res = await fetch("https://cataas.com/cat/gif?json=true");
-        const data = await res.json();
-        const gifUrl = "https://cataas.com" + data.url;
+  for (let i = 0; i < count; i++) {
+    const res = await fetch("https://cataas.com/cat/gif?json=true");
+    const data = await res.json();
+    const gifUrl = "https://cataas.com" + data.url; // fix: build full URL
 
-        const box = document.createElement("div");
-        box.className = "gifBox";
+    const box = document.createElement("div");
+    box.className = "gifBox";
 
-        const img = document.createElement("img");
-        img.src = gifUrl;
-        img.alt = "Cute Cat";
+    const img = document.createElement("img");
+    img.src = gifUrl;
+    img.alt = "Cute Cat";
+    img.loading = "lazy"; // saves bandwidth
 
-        box.appendChild(img);
-        gifContainer.appendChild(box);
-      }
-    }
+    box.appendChild(img);
+    gifContainer.appendChild(box);
+  }
+}
 
     // Load first batch
     loadCats();
