--- a/missingboyfriend.html
+++ b/missingboyfriend.html
@@ -209,7 +209,7 @@
     }
 
     function randomLoveLoop() {
-      const interval = Math.floor(Math.random() * 60000) + 30000; // 30–90s
+      const interval = Math.floor(Math.random() * 5000) + 15000; 
       setTimeout(() => {
         spawnLoveMessage();
         randomLoveLoop();
@@ -294,4 +294,5 @@
 </body>
 
 </html>
+
 
